complete basic form creation

--- a/src/index.html
+++ b/src/index.html
@@ -234,12 +234,12 @@
           <section class="list-item list-item--inline">
             <h2 class="list-item__title">
               Кузов автомобиля нуждается в чистке от битума и металлических
-              вкраплений
+              вкраплений.
             </h2>
 
             <p class="list-item__description">
               Рекомендуется после чистки кузова авто защитить ЛКП воском либо
-              защитным агентом
+              защитным агентом.
             </p>
 
             <div class="list-item__content">
@@ -271,69 +271,69 @@
                 <img src="./assets/outside.png" alt="" />
 
                 <input
-                  id="out-front-bumper" 
-                  type="checkbox" 
-                  style="top: 4%; left: 49.5%" 
+                  id="out-front-bumper"
+                  type="checkbox"
+                  style="top: 4%; left: 49.5%"
                 />
-                <input 
+                <input
                   id="out-hood"
-                  type="checkbox" 
-                  style="top: 21%; left: 49.5%" 
+                  type="checkbox"
+                  style="top: 21%; left: 49.5%"
                 />
-                <input 
+                <input
                   id="out-roof"
-                  type="checkbox" 
-                  style="top: 53%; left: 49.5%" 
+                  type="checkbox"
+                  style="top: 53%; left: 49.5%"
                 />
-                <input 
+                <input
                   id="out-trunk"
-                  type="checkbox" 
-                  style="top: 83%; left: 49.5%" 
+                  type="checkbox"
+                  style="top: 83%; left: 49.5%"
                 />
-                <input 
+                <input
                   id="out-rear-bumper"
-                  type="checkbox" 
-                  style="top: 95%; left: 49.5%" 
+                  type="checkbox"
+                  style="top: 95%; left: 49.5%"
                 />
-                <input 
+                <input
                   id="out-left-front-wing"
-                  type="checkbox" 
-                  style="top: 25%; left: 20%" 
+                  type="checkbox"
+                  style="top: 25%; left: 20%"
                 />
-                <input 
+                <input
                   id="out-right-front-wing"
-                  type="checkbox" 
-                  style="top: 25%; left: 79%" 
+                  type="checkbox"
+                  style="top: 25%; left: 79%"
                 />
-                <input 
+                <input
                   id="out-left-rear-wing"
-                  type="checkbox" 
-                  style="top: 75%; left: 20%" 
+                  type="checkbox"
+                  style="top: 75%; left: 20%"
                 />
-                <input 
+                <input
                   id="out-right-rear-wing"
-                  type="checkbox" 
-                  style="top: 75%; left: 79%" 
+                  type="checkbox"
+                  style="top: 75%; left: 79%"
                 />
-                <input 
+                <input
                   id="out-right-rear-door"
-                  type="checkbox" 
-                  style="top: 57%; left: 79%" 
+                  type="checkbox"
+                  style="top: 57%; left: 79%"
                 />
-                <input 
+                <input
                   id="out-right-front-door"
-                  type="checkbox" 
-                  style="top: 43%; left: 79%" 
+                  type="checkbox"
+                  style="top: 43%; left: 79%"
                 />
-                <input 
+                <input
                   id="out-left-front-door"
-                  type="checkbox" 
-                  style="top: 43%; left: 20%" 
+                  type="checkbox"
+                  style="top: 43%; left: 20%"
                 />
-                <input 
+                <input
                   id="out-left-rear-door"
-                  type="checkbox" 
-                  style="top: 57%; left: 20%" 
+                  type="checkbox"
+                  style="top: 57%; left: 20%"
                 />
               </div>
 
@@ -354,10 +354,10 @@
                             class="price-checkbox__check"
                             type="checkbox"
                           />
-                          <input 
+                          <input
                             id="out-partial-price"
-                            class="price-checkbox__price" 
-                            type="text" 
+                            class="price-checkbox__price"
+                            type="text"
                           />
                           <span class="price-checkbox__currency">грн</span>
                         </div>
@@ -377,9 +377,9 @@
                             type="checkbox"
                           />
                           <input
-                            id="out-full-price" 
-                            class="price-checkbox__price" 
-                            type="text" 
+                            id="out-full-price"
+                            class="price-checkbox__price"
+                            type="text"
                           />
                           <span class="price-checkbox__currency">грн</span>
                         </div>
@@ -401,20 +401,20 @@
           <section class="list-item list-item--inline">
             <h2 class="list-item__title">
               Хромированные (алюминиевые) декоративные элементы автомобиля
-              нуждаются в чистке
+              нуждаются в чистке.
             </h2>
 
             <div class="list-item__content">
               <div class="price-checkbox">
                 <input
                   id="out-elements-check"
-                  class="price-checkbox__check" 
-                  type="checkbox" 
+                  class="price-checkbox__check"
+                  type="checkbox"
                 />
                 <input
                   id="out-elements-price"
-                  class="price-checkbox__price" 
-                  type="text" 
+                  class="price-checkbox__price"
+                  type="text"
                 />
                 <span class="price-checkbox__currency">грн</span>
               </div>
@@ -425,20 +425,20 @@
         <li>
           <section class="list-item list-item--inline">
             <h2 class="list-item__title">
-              Декоративная насадка на выхлопной системе нуждается в чистке
+              Декоративная насадка на выхлопной системе нуждается в чистке.
             </h2>
 
             <div class="list-item__content">
               <div class="price-checkbox">
                 <input
                   id="out-decorative-tip-check"
-                  class="price-checkbox__check" 
-                  type="checkbox" 
+                  class="price-checkbox__check"
+                  type="checkbox"
                 />
                 <input
-                  id="out-decorative-tip-price" 
-                  class="price-checkbox__price" 
-                  type="text" 
+                  id="out-decorative-tip-price"
+                  class="price-checkbox__price"
+                  type="text"
                 />
                 <span class="price-checkbox__currency">грн</span>
               </div>
@@ -449,7 +449,7 @@
         <li>
           <section class="list-item list-item--inline">
             <h2 class="list-item__title">
-              Диски автомобиля нуждаются в чистке
+              Диски автомобиля нуждаются в чистке.
             </h2>
 
             <p class="list-item__description">
@@ -458,15 +458,15 @@
 
             <div class="list-item__content">
               <div class="price-checkbox">
-                <input 
+                <input
                   id="out-wheels-check"
-                  class="price-checkbox__check" 
-                  type="checkbox" 
+                  class="price-checkbox__check"
+                  type="checkbox"
                 />
-                <input 
+                <input
                   id="out-wheels-price"
-                  class="price-checkbox__price" 
-                  type="text" 
+                  class="price-checkbox__price"
+                  type="text"
                 />
                 <span class="price-checkbox__currency">грн</span>
               </div>
@@ -477,24 +477,24 @@
         <li>
           <section class="list-item list-item--inline">
             <h2 class="list-item__title">
-              Подкапотное пространство (мотор) нуждается в мойке
+              Подкапотное пространство (мотор) нуждается в мойке.
             </h2>
 
             <p class="list-item__description">
-              Рекомендуется мыть подкапотное пространство один раз в год
+              Рекомендуется мыть подкапотное пространство один раз в год.
             </p>
 
             <div class="list-item__content">
               <div class="price-checkbox">
                 <input
                   id="out-under-hood-check"
-                  class="price-checkbox__check" 
-                  type="checkbox" 
+                  class="price-checkbox__check"
+                  type="checkbox"
                 />
-                <input 
+                <input
                   id="out-under-hood-price"
-                  class="price-checkbox__price" 
-                  type="text" 
+                  class="price-checkbox__price"
+                  type="text"
                 />
                 <span class="price-checkbox__currency">грн</span>
               </div>
