--- a/src/index.html
+++ b/src/index.html
@@ -11,7 +11,7 @@
 
       <div class="header__logo logo">
         <b class="logo__title">Detailing</b>
-        <img class="logo__image" src="./assets/logo.jpg" alt="Logo" />
+        <img class="logo__image" src="#" id="logo-image" alt="Logo" />
       </div>
     </header>
 
@@ -42,7 +42,7 @@
 
             <div class="list-item__content column--1-1 offset-off">
               <div class="image__container">
-                <img src="./assets/inside.png" alt="" />
+                <img src="#" id="inside-image" alt="" />
 
                 <input
                   id="ins-roof"
@@ -268,7 +268,7 @@
 
             <div class="list-item__content offset-off column--1-1">
               <div class="image__container">
-                <img src="./assets/outside.png" alt="" />
+                <img src="#" id="outside-image" alt="" />
 
                 <input
                   id="out-front-bumper"
